k8s/prometheus-install/kube-prometheus-stack-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"
  name: kube-prometheus-stack-ingress
  namespace: monitoring
spec:
  rules:
  - host: prometheus.gke.yxchia.me
    http:
      paths:
      - backend:
          service:
            name: kube-prometheus-stack-prometheus
            port:
              number: 9090
        path: /
        pathType: Prefix
  - host: alertmanager.gke.yxchia.me
    http:
      paths:
      - backend:
          service:
            name: kube-prometheus-stack-alertmanager
            port:
              number: 9093
        path: /
        pathType: Prefix

  - host: grafana.gke.yxchia.me
    http:
      paths:
      - backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - prometheus.gke.yxchia.me
    - alertmanager.gke.yxchia.me
    - grafana.gke.yxchia.me
    secretName: kube-prometheus-stack-secret
